--- a/src/app/features/farmer/farmer-products/farmer-products.component.scss
+++ b/src/app/features/farmer/farmer-products/farmer-products.component.scss
@@ -30,6 +30,20 @@
     background-color: $darkGreen;
   }
 }
+.form-group{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 100%;
+  .form-note-text{
+    font-size: 0.7em;
+  }
+}
+.form-validator{
+  font-size: 0.7em;
+  color: red;
+}
+
 @media (min-width: 769px){
   .products{
     flex-direction: row;
