--- a/src/app/features/home/map/map.component.html
+++ b/src/app/features/home/map/map.component.html
@@ -17,7 +17,10 @@ class="map-box">
   [longitude]="m.lng" >
 
   <agm-info-window>
-    <strong>{{m.name}}</strong>
+    <div class="farm-details">
+      <img [src]="m.image" alt="farm image" class="farm-image">
+      <span><a [routerLink]="['farm', m.id]" class="farm-name">{{m.name}}</a></span>
+    </div>
   </agm-info-window>
 
 </agm-marker>
