style: edit styles and view

--- a/src/app/features/home/product-categories/product-category/product-category.component.html
+++ b/src/app/features/home/product-categories/product-category/product-category.component.html
@@ -1,8 +1,8 @@
 <div class="product-category">
   <a
     class="product-category-item"
-    [ngClass]="category"
-    [ngStyle]="{'background-image':'url(../../../../../assets/images/icons/categories/' + category + '.svg)'}"
+    [ngClass]="category | lowercase"
+    [ngStyle]="{'background-image':'url(../../../../../assets/images/icons/categories/' + (category | lowercase) + '.svg)'}"
     [routerLink]="['/products']"
     [queryParams]="{ category: category }"
     [title]="'category '+ category"
