--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -7,22 +7,22 @@
   justify-items: center;
   align-items: center;
   gap: 1em;
-  grid-template-columns: auto;
+  grid-template-columns: 10% 10% auto 10%;
   grid-template-rows: auto;
   grid-template-areas:
-    "nav . logo";
+    "nav logo . .";
   box-sizing: border-box;
 
   &.home {
-    grid-template-areas: "nav logo redirect";
+    grid-template-areas: "nav logo . redirect";
 
     .logo-container {
       justify-self: center;
     }
   }
   &.farm {
-    grid-template-areas: "nav logo welcome";
-    grid-template-columns: 10% auto 20%;
+    grid-template-areas: "nav logo . welcome";
+    grid-template-columns: 10% 10% auto 20%;
 
     .logo-container {
       justify-self: center;
@@ -31,7 +31,6 @@
 
   .logo-container {
     grid-area: logo;
-    justify-self: flex-end;
   }
   .redirect-container {
     grid-area: redirect;
@@ -73,10 +72,17 @@
   .header-container {
     background-color: $limeGreen;
     padding: 0 1em;
-    grid-template-columns: 1fr 1fr 1fr;
-
+    grid-template-areas:
+    "logo nav . .";
+    
+    // grid-template-columns: 1fr 1fr 1fr;
+    &.home {
+      grid-template-areas: "logo nav . redirect";
+    }  
+    
     &.farm {
-      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-areas: "logo nav . welcome";
+      // grid-template-columns: 1fr 1fr 1fr;
     }
   }
 }
