--- a/src/app/features/home/map/map.component.html
+++ b/src/app/features/home/map/map.component.html
@@ -6,6 +6,7 @@
 [zoom]="zoom"
 [disableDefaultUI]="false"
 [zoomControl]="false"
+[scrollwheel]="false"
 [fitBounds]="true"
 class="map-box">
 
@@ -13,6 +14,7 @@ class="map-box">
   *ngFor="let m of markers; let i = index" 
   (markerClick)="clickedMarker(m.name, i)"
   [agmFitBounds]="true"
+  
   [latitude]="m.lat" 
   [longitude]="m.lng" >
 
