--- a/src/app/features/home/product-categories/product-categories.component.scss
+++ b/src/app/features/home/product-categories/product-categories.component.scss
@@ -1,3 +1,5 @@
+@import "src/variables";
+
 h2{
   margin: 0;
   font-size: 30px;
@@ -12,10 +14,12 @@ h2{
 }
 .view-all{
   align-self: center;
+  background-color: $limeGreen;
 }
 
 @media (min-width: 1120px){
   .product-categories-list{
     justify-content: center;
+    overflow-x: auto;
   }
 }
