--- a/src/app/features/home/product-categories/product-categories.component.html
+++ b/src/app/features/home/product-categories/product-categories.component.html
@@ -2,4 +2,4 @@
 <div class="product-categories-list">
   <app-product-category *ngFor="let category of categories$ | async" [category]="category.name"></app-product-category>
 </div>
-<button class="view-all" routerLink="/products">view all products</button>
+<button class="view-all" routerLink="/products">View all products</button>
