--- a/src/app/shared/components/grid/grid-item/grid-item.component.html
+++ b/src/app/shared/components/grid/grid-item/grid-item.component.html
@@ -1,7 +1,7 @@
 <div class="item">
   <div class="item-image">
     <img *ngIf="item.image; else noImage"
-      [src]="item.image"
+      src=""
       alt="product image"
       class="object-fit_cover">
     <ng-template #noImage>No image yet ...</ng-template>
@@ -9,10 +9,18 @@
 
   <div class="item-content">
     <h3 class="item-name">{{ item.name }}</h3>
-    <div class="item-description">{{ item.description | slice:0:100 }}...</div>
-    <div class="item-price"  *ngIf="item.price">{{ item.price | currency: 'EUR' }}</div>
-    <div class="item-farm-name" *ngIf="productFarm"><a [routerLink]="'/farm/'+ productFarm.id">{{ productFarm.name }}</a></div>
-<!--    <div class="item-location">{{ item.location ? item.location.address + ', ' + item.location.city : productFarm?.location ? productFarm?.location?.address + ', ' + productFarm?.location?.city: 'somewhere' }}</div>-->
+    <div class="item-description">
+      {{ item.description | slice:0:100 }}...
+    </div>
+    <div class="item-price" *ngIf="item.price">
+      {{ item.price | currency: 'EUR' }}
+    </div>
+    <div class="item-farm-name" *ngIf="item.farmId">
+      <a [routerLink]="'/farm/'+ item.farmId">{{ item.name }}</a>
+    </div>
+    <div class="item-location" *ngIf="item.address">
+      {{ item.country + ', ' + item.city + ', ' + item.address }}
+    </div>
     <div class="item-social">
       <a class="item-social-icon fb" [href]="item.faceBook">Facebook</a>
       <a class="item-social-icon insta" [href]="item.instagram">Instagram</a>
