--- a/src/app/shared/components/grid/grid.component.html
+++ b/src/app/shared/components/grid/grid.component.html
@@ -8,8 +8,8 @@
       <option>Sort by</option>
       <option value="nameAsc">Name A-Z</option>
       <option value="nameDesc">Name Z-A</option>
-      <option value="priceAsc">Price A-Z</option>
-      <option value="priceDesc">Price Z-A</option>
+      <option value="priceAsc">Price lower</option>
+      <option value="priceDesc">Price higher</option>
     </select>
   </div>
 
