--- a/src/app/shared/components/search/search.component.html
+++ b/src/app/shared/components/search/search.component.html
@@ -8,6 +8,6 @@
       #search
       (input)="term.emit(search.value)"
     />
-    <button class="search-button" type="submit">Search</button>
+    <button class="search-button" type="submit" disabled>Search</button>
   </form>
 </div>
