--- a/src/styles.scss
+++ b/src/styles.scss
@@ -105,7 +105,8 @@ button {
 
   &-buttons {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 50px;
   }
 }
 .grow-container{
