--- a/src/app/features/farmer/farmer-farms/farmer-farms.component.html
+++ b/src/app/features/farmer/farmer-farms/farmer-farms.component.html
@@ -2,7 +2,7 @@
   <h2>My farms</h2>
   <div class="farms-scroll">
     <div class="farms">
-      <div class="farms-add" (click)="openModal()">
+      <div class="farms-add" (click)="isModalAddOpened = true">
         <span class="plus">+</span>
         <p class="farms-add-text">Add farm</p>
       </div>
@@ -16,7 +16,7 @@
   </div>
 </div>
 
-<app-modal *ngIf="isModalOpened" (isModalOpened)="isModalOpened = $event">
+<app-modal *ngIf="isModalAddOpened" (isModalOpened)="isModalAddOpened = $event">
   <div class="modal">
     <p class="modal-title">Add new farm</p>
 
@@ -82,7 +82,7 @@
       </div>
 
       <div class="form-group">
-        <label for="farmLocation">Location</label>
+        <label>Location</label>
         <agm-map [latitude]="latitude" [longitude]="longitude" (mapClick)="onChoseLocation($event)" class="form-map">
           <agm-marker [latitude]="latitude" [longitude]="longitude"></agm-marker>
         </agm-map>
@@ -117,7 +117,7 @@
 
       <div class="modal-buttons">
         <button type="submit" [disabled]="!addFarmForm.form.valid || submitted" >Add new farm</button>
-        <button type="button" (click)="closeModal()">Cancel</button>
+        <button type="button" (click)="isModalAddOpened = false">Cancel</button>
       </div>
     </form>
   </div>
