--- a/src/app/core/header/nav/nav.component.scss
+++ b/src/app/core/header/nav/nav.component.scss
@@ -9,6 +9,7 @@ h2 {
   display: flex;
   flex-direction: column;
   gap: 5px;
+  padding: 0;
   position: relative;
   cursor: pointer;
   background: none;
