--- a/src/app/shared/components/grid/filters/filters.component.scss
+++ b/src/app/shared/components/grid/filters/filters.component.scss
@@ -10,7 +10,7 @@
   left: 0;
   display: flex;
   flex-direction: column;
-  gap: 2em;
+  gap: 1em;
   z-index: 10;
   color: #fff;
 
@@ -65,6 +65,7 @@
 }
 .filter-button{
   background-color: $limeGreen;
+  align-self: flex-end;
 
   &:hover{
     background-color: #fff;
@@ -77,6 +78,21 @@
     &:hover{
        background-color: $limeGreen;
       color: #fff;
+    }
+  }
+}
+
+@media (min-width: 1024px){
+
+  .filters-container{
+    position: relative;
+    z-index: 0;
+    height: fit-content;
+    border-radius: 5px;
+    min-width: 250px;
+
+    .filters-close{
+      display: none;
     }
   }
 }
