--- a/src/app/core/header/nav/nav.component.html
+++ b/src/app/core/header/nav/nav.component.html
@@ -18,9 +18,10 @@
     <h3 class="nav-parent">Account</h3>
 
     <ul class="nav-list">
-      <li><a routerLink="/auth" class="nav-parent">Sign in</a></li>
-      <li><a routerLink="/auth" class="nav-parent">Sign up</a></li>
-      <li><a (click)=signOut() class="nav-parent">Sign out</a></li>
+      <li *ngIf="isUser"><a (click)=viewAccount()>Personal Info</a></li>
+      <li *ngIf="isUser"><a (click)=signOut()>Sign out</a></li>
+      <li *ngIf="!isUser"><a  routerLink="auth/login">Sign in</a></li>
+      <li *ngIf="!isUser"><a  routerLink="auth/register" >Sign up</a></li>
     </ul>
     <!-- <ul class="nav-list">
       <li><a href="#" class="nav-parent">personal info</a></li>
