--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 <div class="wrapper">
 
   <app-header class="page-header"></app-header>
-  
-  <router-outlet class="page-body"></router-outlet>
+  <div class="grow-container">
+    <router-outlet class="page-body"></router-outlet>
+  </div>
   
   <app-footer class="page-footer"></app-footer>
 
