--- a/src/app/features/not-found/not-found.component.html
+++ b/src/app/features/not-found/not-found.component.html
@@ -1,6 +1,6 @@
 <div>
   <h1>404 page not found</h1>
-  <h2>Opps, looks like you've lost!</h2>
+  <h2>Oops, looks like you've lost!</h2>
   <picture>
     <source type="image/webp" [attr.lazyLoad]="'./assets/images/lost.webp'" srcset="./assets/images/lost.webp">
     <img lazyLoad="'./assets/images/lost.webp'" style="width: 100%; height: auto;"/>
